--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cli-args": "^2.0.0",
+    "joi": "^14.1.0",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
     "mustache": "^3.0.1",
